[project]
name = "indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "alembic>=1.15.2",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytonapi>=0.4.4",
    "ruff>=0.11.8",
    "sqlalchemy>=2.0.40",
    "sqlmodel>=0.0.24",
    "tonsdk>=1.0.15",
    "uvloop>=0.21.0",
]
