[project]
name = "indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiolimiter>=1.2.1",
    "asyncpg>=0.30.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pytonapi>=0.4.9",
    "ruff>=0.11.8",
    "tonsdk>=1.0.15",
    "uvloop>=0.21.0",
]
